--- a/templates/compliment.html
+++ b/templates/compliment.html
@@ -4,6 +4,18 @@
   <title>A Compliment</title>
 </head>
 <body>
-    Hi {{ person }}! I think you're {{ compliment }}!
+    <p>
+      Hi {{ person }}! I think you're {{ compliment }}!
+    </p>
+
+    <form action="/game">
+      <p>Would you like to play a game?<br/>
+        <input type="radio" name="play_game" value="yes">Yes<br>
+        <input type="radio" name="play_game" value="no">No<br>
+      </p>
+      <p>
+        <input type="submit">
+      </p>
+    </form>
 </body>
 </html>
