--- a/templates/goodbye.html
+++ b/templates/goodbye.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>Hi There!</h1>
+<h1>We will miss you</h1>
 
 <p>
     Sorry you don't want to play, we hope you'll come back!
